# ccs

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  ConsensusCoreCpp.vcxproj  ConsensusCoreCpp.vcxproj.filters  INSTALL.md  LICENSE  Makefile  README  README.md  TODO  USAGE.md  bamboo.sh  bamboo_build.sh  build.sh  circle.yml  configure  format.sh  meson.build  meson_options.txt  requirements.txt  setup.py
ConsensusCore/: CHANGELOG.md  CMakeLists.txt  ConsensusCore.csproj  LICENSES  Makefile  README.md  configure  setup.py
ConsensusCore/include/ConsensusCore/: Checksum.hpp  Consensus-inl.hpp  Consensus.hpp  Feature.hpp  Features.hpp  LValue.hpp  Mutation.hpp  MutationEnumerator-inl.hpp  Read.hpp  Sequence.hpp  Types.hpp  Utils.hpp  Version.hpp
ConsensusCore/make/: CSharp.mk  Cpp.mk  Defs.mk  Python.mk  Tests.mk
ConsensusCore/src/C++/: Checksum.cpp  Coverage.cpp  Features.cpp  Mutation.cpp  MutationEnumerator.cpp  Read.cpp  Sequence.cpp  Utils.cpp  Version.cpp
ConsensusCore/src/Demos/: Demo.py  MatrixTester.cpp
ConsensusCore/src/SWIG/: Edna.i  Evaluator.i  Exceptions.i  Features.i  Mutation.i  PairwiseAlignment.i  PoaConsensus.i  QuiverConsensus.i  Statistics.i  Types.i
ConsensusCore/src/Tests/: ParameterSettings.hpp  Random.hpp  TestCoverage.cpp  TestDiploidQuiver.cpp  TestMatrixFacades.cpp  TestMultiReadMutationScorer.cpp  TestMutationEnumerator.cpp  TestMutationScorer.cpp  TestMutations.cpp  TestPairwiseAlignment.cpp  TestPoaConsensus.cpp  TestSparseVector.cpp
ConsensusCore/tools/: cpplint.py  find_boost  find_swig
include/: meson.build
include/ConsensusCore/: Coverage.hpp  Interval.hpp  Logging.hpp  Mutation-inl.hpp
include/ConsensusCore/Edna/: EdnaConfig.hpp  EdnaCounts.hpp
include/pacbio/: GitHash.h.in  UnanimityConfig.h  UnanimityVersion.h  UnanimityVersion.h.in  Version.h.in  meson.build
include/pbsparse/: BandedAligner.h  ChainScorer.h  ChainSeeds.h  FilterSeeds.h  FindSeeds.h  HomopolymerHasher.h  SparseAlignment.h
src/: AbstractIntegrator.cpp  AminoAcidCaller.cpp  ArrayRead.cpp  CMakeLists.txt  ChainSeeds.cpp  ChemistryMapping.cpp  ChemistryTriple.cpp  ChimeraLabeler.cpp  Cleric.cpp  ClericSettings.cpp  Consensus.cpp  ConsensusSettings.cpp  Constants.h  Coverage.cpp  EasyReadScorer.cpp  ErrorEstimates.cpp  Evaluator.cpp  EvaluatorImpl.cpp  EvaluatorImpl.h  Fisher.cpp  Fuse.cpp  FuseSettings.cpp  Integrator.cpp  Interval.cpp  IntervalMask.cpp  JsonHelpers.h  JulietSettings.cpp  JulietWorkflow.cpp  LocalAlignment.cpp  MSA.cpp  MSAColumn.cpp  ModelConfig.cpp  ModelFactory.cpp  ModelFactory.h  ModelFormFactory.cpp  ModelFormFactory.h  ModelInternalInitializer.cpp.in  ModelNaming.h  ModelSelection.cpp  MonoMolecularIntegrator.cpp  (+26 more)
src/C++/: Feature.cpp
src/Demos/: Demo.cs
src/SWIG/: ConsensusCore.i  Matrix.i  Utils.i  Version.i
src/Tests/: MatrixPrinting.hpp  ParameterSettings.cpp  SseTestingUtils.hpp  TestMutationScorer.cpp  TestPoaConsensus.cpp  TestQvEvaluator.cpp  TestRecursors.cpp
src/align/: AffineAlignment.cpp  AlignConfig.cpp  BandedChainAlignment.cpp  LinearAlignment.cpp  PairwiseAlignment.cpp
src/main/: ChimeraLabeler.cpp  arrow.cpp  ccs.cpp  ccs_sim.cpp  cleric.cpp  fuse.cpp  gcpp.cpp  genomic_sim.cpp  juliet.cpp
src/matrix/: BasicDenseMatrix.cpp  BasicDenseMatrix.h  ScaledMatrix.cpp  ScaledMatrix.h  SparseMatrix.cpp  SparseMatrix.h  SparseVector.h
src/models/: CounterWeight.h  HelperFunctions.h  MarginalModelForm.cpp  P6C4NoCovModel.cpp  P6C4NoCov_Model.cpp  PwSnrAModelForm.cpp  PwSnrModelForm.cpp  SP1C1BetaNoCovModel.cpp  SP1C1NoCovModel.cpp  SP1C1PwModel.cpp  S_P1C1Beta_Model.cpp  S_P1C1v1_Model.cpp  S_P1C1v2_Model.cpp  S_P2C2_Model.cpp  S_P2C2v5_Model.cpp  SnrModelForm.cpp
src/poa/: AlignConfig.cpp  BoostGraph.h  POA-NOTES.txt  PoaAlignmentMatrix.cpp  PoaAlignmentMatrix.h  PoaConsensus.cpp  PoaGraph.cpp  PoaGraphImpl.cpp  PoaGraphImpl.h  PoaGraphTraversals.cpp  RangeFinder.cpp  VectorL.h
src/variantCaller/: VariantCallerSettings.cpp  VariantCallerSettings.h  variantCaller.cpp
swig/: Alignment.i  CMakeLists.txt  ConsensusCore2.i  ConsensusCore2.i.in  ConsensusCore2.py  Coverage.i  Evaluator.i  Exceptions.i  Integrator.i  Matrix.i  ModelConfig.i  Mutation.i  Poa.i  Polish.i  Read.i  State.i  Template.i  Version.i  Version.i.in  meson.build  pbconsensus.i  pbconsensus.i.in
swig/ConsensusCore2/: __init__.py
test/unit/: CMakeLists.txt  ChimeraTest.cpp
tests/: CMakeLists.txt  Mutations.cpp  Mutations.h  RandomDNA.cpp  RandomDNA.h  TestAlignment.cpp  TestChemistry.cpp  TestConsensus.cpp  TestCoverage.cpp  TestData.h.in  TestEvaluator.cpp  TestIntegrator.cpp  TestInterval.cpp  TestMutationEnumerator.cpp  TestPoaConsensus.cpp  TestPolish.cpp  TestSequence.cpp  TestSparseAlign.cpp  TestSparsePoa.cpp  TestSparseVector.cpp  TestTemplate.cpp  TestUtility.h  TestUtils.cpp  TestUtils.h  TestWhitelist.cpp  meson.build
tests/cram/: 0passes.t  100zmws.t  100zmws_byStrand.t  43385286.t  barcodes.t  force.t  fuse.t  juliet.t  julietflow.t  logfile.t  nozfilter.t  tiny.t  tiny_noPolish.t
tests/data/: 0passes.bam  1000.bam  1000.json  100zmws.bam  43385286.bam  amplicon_analysis.fasta  amplicon_analysis.fastq  amplicon_analysis_chimeras_noise.fastq  chimera_minimal.fasta  m140905_042212_sidney_c100564852550000001823085912221377_s1_X0.fasta  mapping.xml  phi29.bam  test.fasta  tiny.bam
tests/python/: test_tool_contract.py
tests/unit/: ChimeraTest.cpp  FisherTest.cpp  Mutations.cpp  Mutations.h  RandomDNA.cpp  RandomDNA.h  TestAlignment.cpp  TestAmbiguousBases.cpp  TestBandedChainAlign.cpp  TestChemistry.cpp  TestConsensus.cpp  TestCoverage.cpp  TestData.h.in  TestGenomicConsensus.cpp  TestGenomicConsensus_Experimental.cpp  TestIntegrator.cpp  TestInterval.cpp  TestIntervalMask.cpp  TestLoadModels.cpp  TestMutationEnumerator.cpp  TestMutationTracker.cpp  TestPlurality.cpp  TestPoaConsensus.cpp  TestPolish.cpp  TestSequence.cpp  TestSparseAlign.cpp  TestSparsePoa.cpp  TestSparseVector.cpp  TestTemplate.cpp  TestUtility.cpp  TestUtility.h  TestWhitelist.cpp  meson.build
(+390 files in other folders)
