option('enable-uny-build-ccs',     type : 'boolean', value : true,  description : 'Build UNANMITIY\'s circular consensus tool')
option('enable-uny-build-chimera', type : 'boolean', value : true,  description : 'Build UNANMITIY\'s stand-alone chimera labeler')
option('enable-uny-build-sim',     type : 'boolean', value : true,  description : 'Build UNANMITIY\'s (sub)read simulator')

# python:
option('enable-uny-build-swig',    type : 'boolean', value : true,     description : 'Build UNANMITIY\'s SWIG interfacing code')
option('PYTHON',                   type : 'string',  value : 'python', description : 'Python interpreter to use for byte-compiling .py files')
option('pythoninstalldir',         type : 'string',                    description : 'Directory to install python files into, will use python sitedir if left empty')
